tests/samples/negative/generics/where_empty_clause.ax
module where_empty_clause;

fn id<T>(value: T) -> T where {
    return value;
}

fn main() -> i32 {
    return id(1);
}
